[package]
name = "marker"
version = "0.1.0"
authors = ["Elliot <hack00mind@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
pulldown-cmark = "0.9.1"
